# generals-ai

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TODO.md  build.sh  network.pt
include/: cli.hpp  device.hpp  dirs.hpp  display.hpp  eval.hpp  evaluation.hpp  game.hpp  interaction.hpp  network.hpp  search.hpp  train.hpp  ui.hpp
include/search/: heuristics.hpp  hybrid.hpp
src/: cli.cpp  display.cpp  evaluation.cpp  game.cpp  interaction.cpp  main.cpp  network.cpp  train.cpp  ui.cpp
src/eval/: hce.cpp
src/search/: heuristics.cpp  hybrid.cpp
